--- a/css/style.scss
+++ b/css/style.scss
@@ -24,3 +24,276 @@
 .ralewayMI {
     font-family: 'mediumItalic', sans-serif;
 }
+
+body{
+    margin: 0;
+    background: #10B582;
+}
+
+.page-header{
+    background: #10B582;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // border: 2px solid yellow;
+    padding-top: 40px;
+}
+
+.logo{
+    // border: 1px solid blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 22px;
+    max-width: 170px;
+    background-color: transparent;
+
+    .logo__img{
+        width: 170px;
+        height: 22px;
+        
+    }
+    // .logo--white{
+
+    // }
+}    
+
+.site-navigation{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    width: 650px;
+    height: 24px;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    // border: 1px solid blue;
+    // border-bottom: transparent;
+    color: #FDFDFD;
+    background-color: transparent;
+
+    .site-navigation__item{
+        list-style-type: none;
+        
+    }
+    .site-navigation__link{
+        text-decoration: none;
+        color: #FDFDFD;
+    }
+    .site-navigation__link--active:hover{
+        border-bottom: 2px dashed #FA9F42;
+        padding-bottom: 2px;
+    }
+
+}
+
+.promo{
+    // border: 1px solid black;
+    background-color: transparent;
+    color: #FDFDFD;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 560px;
+    padding-bottom: 120px;
+    padding-top: 56px;
+    padding-left: 135px;
+    position: relative;
+
+    .promo__img-left{
+        position: absolute;
+        bottom: 120px;
+        left: 135px;
+        border-radius: 0px 80px 0px 0px;
+        z-index: 2;
+
+    }
+    .promo__img-fight{
+        position: absolute;
+        right: 135px;
+        top: 86px;
+        border-radius: 80px 0px 0px 0px;
+        z-index: 2;
+    }
+
+    .promo__content{
+        // border: 1px solid red;
+        text-align: center;
+        width: 542px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .promo__title{
+        margin: 0;
+        max-width: 542px;
+        font-size: 58px;
+        line-height: 120%;
+        margin-bottom: 20px;
+        margin-top: 40px;
+
+    }
+    .promo__description{
+        margin: 0;
+        max-width: 378px;
+        font-size: 16px;
+        line-height: 150%;
+        margin-bottom: 50px;
+    }
+
+    .promo__social{
+        align-self: flex-start;
+    }
+
+    .promo__link{
+        align-self: flex-end;
+        transform: translateY(-70px);
+        // border: 1px solid white;
+        // -webkit-transform: rotate(90deg); 
+        // transform: rotate(-90deg);
+        // position: relative;
+        
+        
+
+        .promo__link-down{
+            // border: 1px solid blue;
+            box-sizing: border-box;
+            display: block;
+            padding-left: 15px;
+            width: 135px; //по умолчанию 129px
+            height: 10px;
+            text-decoration: none;
+            text-align: center;
+            font-size: 14px;
+            // -webkit-transform: rotate(90deg); 
+            transform: rotate(-90deg);
+            background-color: transparent;
+            color: #FDFDFD;
+            position: relative;
+            right: 80px;
+        }
+        .promo__link-down::after{
+            content: '';
+            display: block;
+            background-color: transparent;
+            width: 7px;
+            height: 7px;
+            transform: rotate(45deg);
+            border: none;
+            border-bottom: 2px solid #FDFDFD;
+            border-left: 2px solid #FDFDFD;
+            position: absolute;
+            top: 4px;
+            left: 0;
+        }
+        .promo__link-down::before{
+            content: '';
+            display: block;
+            background-color: #FDFDFD;
+            width: 2px;
+            height: 20px;
+            transform: rotate(90deg);
+            position: absolute;
+            top: -1px;
+            left: 8px;
+            border-radius: 5px;
+        }  
+    }   
+}
+
+.promo::after{
+    content: '';
+    display: block;
+    width: 240px;
+    height: 300px;
+    border: 1px dashed #FDFDFD;
+    border-radius: 0px 80px 0px 0px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 165px;
+    margin-bottom: 150px;
+    z-index: 1;
+}
+.promo::before{
+    content: '';
+    display: block;
+    width: 240px;
+    height: 300px;
+    border: 1px dashed #FDFDFD;
+    border-radius: 80px 0px 0px 0px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 165px;
+    margin-top: 56px;
+    z-index: 1;
+}
+
+
+.promo__button{
+    
+    
+    .button{
+        border: none;
+        border-radius: 0px 20px;
+        padding: 0;
+        width: 230px;
+        height: 56px;
+        outline: none;
+        background-color: #10B582;
+        color: #FDFDFD;
+        font-weight: 500;
+        font-size: 16px;
+        text-align: center;
+        line-height: 56px;
+        
+
+    }
+    .button--accent{
+        background-color: #FA9F42;
+    }
+}
+
+.social{
+    // border: 1px solid blue;
+    // box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: transparent;
+    max-width: 116px;
+    height: 22px;
+
+    .social__item{
+        list-style-type: none;
+        
+    }
+    .social__link{
+        text-decoration: none;
+    }
+    .social__img{
+        opacity: 1;
+    }
+    .social__img--light path{
+        fill: #FDFDFD; //изменяет цвет иконо на белый
+    } 
+    // .social__img--opacity{
+    //     opacity: 0.3; //добавляет прозрачность 30%
+    // }
+} 
+//Иконки становятка вертикально
+.social--vertical{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: transparent;
+    max-width: 22px;
+    min-height: 126px;
+    
+}
+    
