--- a/css/style.scss
+++ b/css/style.scss
@@ -233,7 +233,6 @@ body{
     z-index: 1;
 }
 
-
 .promo__button{
     
     
@@ -294,6 +293,181 @@ body{
     background-color: transparent;
     max-width: 22px;
     min-height: 126px;
+    
+}
+
+.statistics{
+    background: #FDFDFD;
+    // border: 1px solid black;
+    padding: 120px 0 120px 0;
+    display: flex;
+    justify-content: center;
+
+    .statistics__list{
+        display: flex;
+
+        .statistics__item{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            max-width: 270px;
+            margin: 0 15px 0 15px;
+
+            .statistics__indicator{
+                color: #10B582;
+                font-size: 58px;
+                line-height: 100%;
+                margin-bottom: 15px;
+                font-feature-settings: 'pnum' on, 'lnum' on;
+            }
+            .statistics__description{
+                display: block;
+                padding: 0 15px 0 15px;
+                max-width: 100%;
+                color: #353A5A;
+                font-size: 14px;
+                line-height: 120%;
+            }
+        }
+    }
+}
+
+
+
+.offer{
+    // background: #FDFDFD;
+    background: transparent;
+    max-width: 500px;
+
+    .offer__title{
+        margin: 0;
+        font-size: 58px;
+        line-height: 100%;
+        color: #353A5A;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+    }
+    .offer__description{
+        margin: 20px 0 0 0;
+        color: #353A5A;
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .offer__button{
+        margin: 50px 0 0 0;
+    }
+
+    .offer--center{
+        
+    }
+    .offer--color-white{
+        color: #FDFDFD;
+    }
+}
+
+
+.teachers{
+    background: #FDFDFD;
+    // background: blue;
+    display: flex;
+    justify-content: center;
+
+    .teachers__wrp{
+        min-width: 1170px;
+        display: flex;
+        justify-content:space-between;
+        align-items: center;
+        padding-bottom: 120px;
+
+        .teachers__description{
+
+        }
+    
+        .teachers__img-box{
+            max-width: 570px;
+            min-height: 472px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-content: space-between;
+            // border: 1px solid black;
+            
+    
+            .teachers__cart{
+                display: block;
+                max-width: 170px;
+                margin: 0;
+            }
+            .teachers__img{
+                width: 170px;
+                margin: 0 0 15px 0;
+            }
+            .teachers__caption{
+                font-size: 14px;
+                line-height: 130%;
+                text-align: center;
+                color: #353A5A;
+            }
+        }
+        .cropping-bottom-left{
+            border-radius: 0px 0px 0px 80px;
+        }
+        .cropping-bottom-right{
+            border-radius: 0px 0px 80px 0px;
+        }
+        .cropping-top-left{
+            border-radius: 80px 0px 0px 0px;
+        }
+        .cropping-top-righ{
+            border-radius: 0px 80px 0px 0px;
+        }
+
+    }
+}
+
+.product{
+    background: #10B582;
+    min-height: 602px;;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding-top: 120px;
+    // padding-bottom: 120px;
+
+    .product__wrp{
+        min-width: 1100px;
+        display: flex;
+        justify-content: space-between;
+        
+        .product__img-box{  
+            max-height: 332px;          
+            align-self: flex-end;
+            position: relative;
+
+            .product__img{
+                display: block;
+                border-radius: 0px 120px 0px 0px;
+                position: relative;
+            }
+        }
+        .product__img-box::before{
+            content: '';
+                display: block;
+                width: 470px;
+                height: 332px;
+                border: 1px dashed #FDFDFD;
+                // border-style: solid;
+                box-sizing: border-box;
+                border-radius: 0px 120px 0px 0px;
+                position: absolute;
+                bottom: 30px;
+                left: 30px;
+        }
+
+        .product__description{
+
+        }
+    }
     
 }
     
